# ffmpegApi

G711A互转PCM/: AudioCodec.cpp  AudioCodec.h
G711a转aac/: pcm_alaw_to_aac.c  pcm_alaw_to_aac.h
VMDxva3/VMDxva3/: CMakeLists.txt  FFmpegServer.cpp  FFmpegServer.h  MergerServer.cpp  MergerServer.h  VMDxva2.cpp  VMDxva2.h
j3pro抽帧/: Get_h264_Gop.cpp  Get_h264_Gop.h
libRtmp远程调试/: Rtmp.sln  Rtmp.tar  librtmp.so.0
libRtmp远程调试/CodeDB/Rtmp-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  Rtmp.npd  Rtmp.rdb  codedb.lck
libRtmp远程调试/CodeDB/Rtmp-Debug-Win32.0001/: Rtmp.npa00  Rtmp.npd  Rtmp.rdb  tmp00000002.npa00
libRtmp远程调试/Rtmp/: CMakeLists.txt  CMakeLists.txt.old  Rtmp-Debug.vgdbsettings  Rtmp-Release.vgdbsettings  Rtmp.vcxproj  Rtmp.vcxproj.filters  gcc_Debug.h  gcc_Release.h
mediaEngineLog/: test.cpp
mp4转ts源码(支持互转)/: TsConvertMp4 - 副本 (硬解码).cpp  TsConvertMp4.cpp  TsConvertMp4.h  mp4.cpp  mp4.h  说明.docx
rtmp_push_h264/rtmp_push_h264/: librtmp_send264.cpp  simplest_librtmp_send264.cpp
rtmp_push_h264/rtmp_push_h264/include/: sps_decode.h
rtmp推流+历史调阅/: FileUpload.cpp  FileUpload.h
历史调阅接口/: VideoReview.cpp  VideoReview.h
多功能解复用/: ReadH264.c  ReadH264.h
抽取I帧apl文档/: Get_I_Frame_to_MP4.cpp  Get_I_Frame_to_MP4.h  说明.docx
抽帧JPG图片/: CutFrame.c  CutFrame.h  yuv_convert_to_jpeg.c  yuv_convert_to_jpeg.h
抽帧gop/: Get_h264_Gop.cpp  Get_h264_Gop.h  设备抽帧接口.docx
编码h265/H2652Yuv/H2652Yuv/: 2.h265  H2652Yuv.cpp  H2652Yuv.vcxproj  H265Decoder.cpp
自定义io抽帧/: CutFrameSbh.cpp  CutFrameSbh.h  record_parse.cpp  record_parse.h  yuv_convert_to_jpeg.c
(+17 files in other folders)
